#92 refactor: OAuth2SuccessHandler 에서 jwtService 참조하도록 변경